Exchange the image files. And exchange the state transition trigger (button -> VolKey).

--- a/MyApplication_brightness/app/src/main/res/layout/activity_gotohome.xml
+++ b/MyApplication_brightness/app/src/main/res/layout/activity_gotohome.xml
@@ -7,22 +7,9 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:src="@drawable/goto_home_image"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <Button
-        android:id="@+id/return_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/return_sub"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/gotohome_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
