--- a/MyApplication_brightness/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication_brightness/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,26 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:src="@drawable/main_image"
-        android:scaleType="centerCrop"
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/dora" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="112dp" />
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        tools:layout_editor_absoluteX="64dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="TextView"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="64dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="64dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
